tests/bigint/invalid13.js
const invalid_octal_legacy = 016432n; // error
